@@ -11,6 +11,8 @@ Date: ??. ??. 2021
     - GUI now shows applied effects, and sorts according to score.
   Changes:
     - Increase tank effect time from 5 to 10 seconds.
+  Bugfixes:
+    - Fixed case where effects can become corrupted.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.1
 Date: 02. 06. 2021
